<resources>
    <string name="app_name">Paya</string>
    <string name="empowering">Empowering</string>
    <string name="currency_symbol">$</string>
    <string name="iqd_currency_symbol">IQD</string>
    <string name="empowering_tag_line">You\'re in control of your property deal</string>
    <string name="zero_commission">Zero Commission</string>
    <string name="zero_commission_tag_line">With no agents, you can make big savings</string>
    <string name="other_service">Other Services</string>
    <string name="expert_community_tag_line">Created to support you, on your terms</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="in">in</string>
    <string name="properties_for">Properties for</string>
    <string name="projects_for">Projects</string>
    <string name="facebook_app_id">274323400634313</string>
    <string name="local_experts">Local Experts</string>
    <string name="location">Location</string>
    <string name="add_more">Add More</string>
    <string name="property_type">Property Type</string>
    <string name="select_property_type">Select property type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bedrooms_star">Bedrooms <font color='#ff3333'>*</font></string>
    <string name="bedroom_s">Bedroom(s)</string>
    <string name="select">Select</string>
    <string name="city">City</string>
    <string name="city_loc">City (Baghdad, Erbil, Basrah,…)</string>
    <string name="select_city">Select City</string>
    <string name="search">Search</string>
    <string name="save_search">Save Search</string>
    <string name="featured">Featured</string>
    <string name="make_an_offer">Make An Offer</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="type">Type</string>
    <string name="average_price">Average Price</string>
    <string name="read_more">Read More....</string>
    <string name="more_specifications">More Specifications</string>
    <string name="property_deals_you_control">Find your dream house without leaving yours</string>
    <string name="google_places_api_key">AIzaSyBC3Js9FC_wmUUrub7jJ9lJNVGsf9-KnvA</string>
    <string name="similar_properties">Similar Properties</string>
    <string name="login">Login</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="my_properties">My Properties</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="submit">Submit</string>
    <string name="or_sign_in_with">OR Login in with</string>
    <string name="i_accept_terms_of_use_and_privacy_policy">I accept Paya\'s Terms of Use and Privacy
        Policy
    </string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="remember_your_password_sing_in">Back to Login</string>
    <string name="any">All</string>
    <string name="ok">OK</string>
    <string name="properties">Properties</string>
    <string name="projects">Projects</string>
    <string name="shortlisted">Favorites</string>
    <string name="posted_requirements">Posted Requirements</string>
    <string name="my_plan">My Plan</string>
    <string name="sold_out">Sold Out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="current_plan">Current Plan:</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="purchased_on">Purchased on:</string>
    <string name="expires_on">Expires on:</string>
    <string name="features">Features</string>
    <string name="subscribe_unsubscribe">Subscribe / Unsubscribe</string>
    <string name="save_search_alert">Save Search Alert</string>
    <string name="newsletters">Newsletters</string>
    <string name="message">Message:</string>
    <string name="posted_date">Posted Date:</string>
    <string name="scheduled_date">Scheduled Date:</string>
    <string name="selected_slot">Selected Slot:</string>
    <string name="property_status">Property Status</string>
    <string name="area">Area</string>
    <string name="read_less">Read Less..</string>
    <string name="less_specifications">Less Specifications</string>
    <string name="select_user_type">Select User Type</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email (optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subscribe_newsletters">Subscribe Newsletters</string>
    <string name="already_have_an_account_log_in">Already have an account..? LOGIN</string>
    <string name="new_to_findhome_sign_up">New to Paya ?</string>
    <string name="no_result_found">Results not found !</string>
    <string name="select_a_country">Select a county</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="mobile_number">Mobile</string>
    <string name="contact_owner">Contact</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="mortgage_info_property_contact_owner">Would you like to receive information on the best mortgage rates
        for this property ?
    </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions_and_privacy_policy">I agree to Terms and Conditions and Privacy Policy</string>
    <string name="offer_price_aed">Offer Price (AED)</string>
    <string name="comments">Comments</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_for_contact">Thank you for contacting</string>
    <string name="make_an_offer_success_message">Your offer is successfully submitted to the Landlord/Seller</string>
    <string name="contact_owner_success_message">Your enquiry has been submitted &#38; We will get back to you soon
    </string>
    <string name="enquiry">Enquiry</string>
    <string name="price">Price</string>
    <string name="add_price">Add Price</string>
    <string name="current_status">Current Status</string>
    <string name="current_status_col">Current Status:</string>
    <string name="property_specification">Property Specification</string>
    <string name="offer_price">Offer Price:</string>
    <string name="logout">Logout</string>
    <string name="saved_on">Saved on</string>
    <string name="zero">0</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="dummy_number">10</string>
    <string name="rent_term">Rent Term</string>
    <string name="add_video">Add Video</string>
    <string name="amenities_optional">Amenities(optional)</string>
    <string name="amenities">Amenities</string>
    <string name="name">Name</string>
    <string name="bathrooms">BathRooms</string>
    <string name="gallery_image_upload_specification">*Upload images with size - Width: 618px X Height: 412px \n Allowed
        Type: jpg, png, jpeg, gif, svg
    </string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="skip">SKIP</string>
    <string name="default_country_code">(IN) +91</string>
    <string name="my_account">My Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="buy_property">Buy Property</string>
    <string name="rent_property">Rent Property</string>
    <string name="add_property">Add Property</string>
    <string name="post_requirement">Post Requirement</string>
    <string name="new_projects">New Projects</string>
    <string name="agents">Agents</string>
    <string name="calculator">Calculator</string>
    <string name="sell_post_ad">Sell / Post Free Ad</string>
    <string name="post_your_requirement">Post your Requirement</string>
    <string name="add_to_email">Add To Email Basket</string>
    <string name="share">Share</string>
    <string name="search_hint_text">Search by Location</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_text">Enter the mobile number associated with your account, and we will send you the OTP to reset your password:
    </string>
    <string name="password_update">Password updated successfully</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Lat Long Used</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="i_want_to">I want to</string>
    <string name="sell">Sell</string>
    <string name="sale">Sale</string>
    <string name="enter_property_name">Enter Property Name</string>
    <string name="post_your_property_in_simple_steps">Post your Property in simple steps</string>
    <string name="locality_info">Locality Info</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="didn_t_find_your_locality_click_here">Didn\'t find your Locality? Click Here</string>
    <string name="locality">Locality</string>
    <string name="district">District</string>
    <string name="country">Country</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_locality">Enter Locality</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_zip_postal_code">Enter Zip/Postal Code</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="upcoming">Upcoming</string>
    <string name="ready_to_move">Ready to move</string>
    <string name="under_construction">Under Construction</string>
    <string name="address_1">Address</string>
    <string name="address_2">Address 2</string>
    <string name="yearly_rent">Rent</string>
    <string name="overview">Overview</string>
    <string name="gallery_images">Gallery Images</string>
    <string name="upload_your_photos_here">Upload your photos here</string>
    <string name="upload_your_blueprint_here">Upload your blueprint here</string>
    <string name="video">Video</string>
    <string name="view_360">360 Degree View</string>
    <string name="copy_url">Copy paste your 360 degree URL here</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="please_enter_youtube_url">Please enter youtube url</string>
    <string name="video_status">Video Status</string>
    <string name="title">Title</string>
    <string name="update">Update</string>
    <string name="faq">FAQ</string>
    <string name="properties_enquiry">My Properties</string>
    <string name="settings">Settings</string>
    <string name="properties_enquiries">Properties/Enquiries</string>
    <string name="home">Home</string>
    <string name="duration">Duration :</string>
    <string name="photo_uploading">Photo Uploading:</string>
    <string name="video_uploading">Video Uploading:</string>
    <string name="property_description_plan">Property Description:</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="sort_by">SORT BY</string>
    <string name="gallery">Gallery</string>
    <string name="remove_photo">Remove photo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="my_questions">My Questions</string>
    <string name="viewing_request">Viewing Request</string>
    <string name="open_house">Open House</string>
    <string name="unified_tenancy_contract">Unified Tenancy Contract</string>
    <string name="sort_by_asc">sortby asc</string>
    <string name="sort_by_desc">sortby desc</string>
    <string name="property_count">Property Count</string>
    <string name="sort_by_high_low">sortby high to low</string>
    <string name="sort_by_low_high">sortby low to high</string>
</resources>