<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/item_layout_change_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_marginBottom="10dp"
        android:paddingEnd="5dp"
        android:background="@drawable/bg_edit_text_curve"
        android:orientation="horizontal">

    <ImageView
            android:id="@+id/image_plan_change_check"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_radio_button"
            tools:ignore="ContentDescription"/>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/plan_name_item_plan_change"
                android:layout_width="match_parent"
                android:text="Gold Plan"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"/>

        <TextView
                android:id="@+id/duration_item_plan_change"
                android:layout_width="match_parent"
                android:text="@string/duration"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/photo_item_plan_change"
                android:layout_width="match_parent"
                android:text="@string/photo_uploading"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/video_item_plan_change"
                android:layout_width="match_parent"
                android:text="@string/video_uploading"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/description_item_plan_change"
                android:layout_width="match_parent"
                android:text="@string/property_description_plan"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>