<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_photo"
        android:textColor="@color/gray"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_head"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="40dp">

        <LinearLayout
            android:id="@+id/ll_gallery"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/round"
                android:padding="15dp"
                android:src="@drawable/ic_gallery_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_remove"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/round_gray"
                android:padding="15dp"
                android:src="@drawable/ic_delete_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/remove_photo"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>